[build-system]
build-backend = "cmeel"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for GKlib"
license = "Apache-2.0"
name = "cmeel-gklib"
requires-python = ">= 3.8"
version = "0.0.1"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-GKlib"
repository = "https://github.com/cmake-wheel/cmeel-GKlib.git"
upstream = "https://github.com/KarypisLab/GKlib"

[tool.cmeel]
has-sitelib = false
run-tests = false

[tool.tomlsort]
all = true
